--- a/GenericHID/generichid/help/generichid.1.0.htm
+++ b/GenericHID/generichid/help/generichid.1.0.htm
@@ -12,6 +12,9 @@ board that breaks out the pins of the at90usb1287.&nbsp; It also includes the
 although it is a bit large.&nbsp; Version 1.1 is in the works; it is smaller, 
 but also loses the JTAG interface and RS232 interface (only useful for 
 debugging).</p>
+<p>Details of the board can be
+<a href="http://www.franksworkshop.com.au/CNC/GenericHIDBoard1.0/GenericHIDBoard1.0.htm">
+found here</a>.</p>
 
 <h2>Properties</h2>
 
