--- a/GenericHID/generichid/help/hardware.htm
+++ b/GenericHID/generichid/help/hardware.htm
@@ -103,7 +103,10 @@ back to check the prices, the site looked parked.&nbsp; Whispers are the owner
 is off on a secret international mission somewhere.</p>
 <h3 id=diyboards>DIY Boards</h3>
 <p>Another option is to make your own board. If you can make PCBs and do surface 
-mount soldering, the design of the board is quite simple.&nbsp; </p>
+mount soldering, the design of the board is quite simple.&nbsp; Here is a link 
+to my
+<a href="http://www.franksworkshop.com.au/CNC/GenericHIDBoard1.0/GenericHIDBoard1.0.htm">
+Custom GenericHID Board</a>.&nbsp; </p>
 <h2 id=reclaiming>Reclaiming AT90USBKey Pins</h2>
 <p>Because this is a demo board, there are other peripherals attached to the 
 board.&nbsp; While these parts remain, 22 of 48&nbsp; I/O pins can't be used.&nbsp; 
