--- a/GenericHID/generichid/help/index.htm
+++ b/GenericHID/generichid/help/index.htm
@@ -239,15 +239,40 @@ code and demos...</p>
 			implements a property browser class.</td>
 		</tr>
 	</table>
-	<h2 id=download>Download and Installl</h2>
-<pWindows</p>
-<p>*package*</p>
-<p>Windows also requires the libusb-win32 device driver install.&nbsp; </p>
+	<h2 id=download>Download and Install</h2>
+<h3>Windows</h3>
+<p>The Win32 binary can be downloaded here...</p>
+		<p>&nbsp;<a href="http://users.tpg.com.au/ftkalcev/generichid_win32_1.0.zip"><img style="background-color=white" border="0" src="gplv3-88x31.png" width="88" height="31"></a>.&nbsp; </p>
+		<p>To install the application, create an empty directory and unzip the 
+		contents of the file into the new directory.&nbsp; You can then run the 
+		GenericHID.exe application.</p>
+<p>Windows also requires the libusb-win32 device driver be installed.&nbsp; You 
+can get it from here...</p>
 <p><a href="http://sourceforge.net/projects/libusb-win32/files/">
 libusb-win32-device-bin</a></p>
-<p>libusb32</p>
-<p>Linuxx</p>
-<p>*package*</p>
-<p>*source*</p>
+<h3>Linux</h3>
+<p>The Linux Debian pacakge can be downloaded here...</p>
+		<p>&nbsp;<a href="http://users.tpg.com.au/ftkalcev/generichid_1.0_i386.deb"><img style="background-color=white" border="0" src="gplv3-88x31.png" width="88" height="31"></a></p>
+		<p><span style="background-color: #FFFFFF">Install it using the dpkg 
+		command....</span></p>
+					<p>To install <b>GenericHID</b>, download the binary package and install it with your 
+					favourite package manager.
+					Or install it from the command line...
+					</p>
+					<blockquote class="code">
+						sudo dpkg -i generichid_1.0_i386.deb
+					</blockquote>
+					
+					<p><b>GenericHID</b> can be uninstalled using ...
+					</p>
+					<blockquote class="code">
+						sudo dpkg -r generichid
+					</blockquote>
+					<p><span style="background-color: #FFFFFF">Type generichid 
+					at the command line to run it.</span></p>
+<h3>Source</h3>
+<p>The source code can be downloaded here&nbsp; <a href="http://users.tpg.com.au/ftkalcev/generichid_1.0_src.tgz"><img style="background-color=white" border="0" src="gplv3-88x31.png" width="88" height="31"></a>.&nbsp; 
+It requires Qt 4.5.2 (qtsdk2009.03).&nbsp; The release binaries are built 
+against the static libraries.</p>
 		</body>
 </html>
