--- a/GenericHID/generichid/help/index.htm
+++ b/GenericHID/generichid/help/index.htm
@@ -249,7 +249,7 @@ code and demos...</p>
 <p>Windows also requires the libusb-win32 device driver be installed.&nbsp; You 
 can get it from here...</p>
 <p><a href="http://sourceforge.net/projects/libusb-win32/files/">
-libusb-win32-device-bin</a></p>
+libusb-win32-filter-bin-0.1.12.2.exe</a></p>
 <h3>Linux</h3>
 <p>The Linux Debian pacakge can be downloaded here...</p>
 		<p>&nbsp;<a href="http://users.tpg.com.au/ftkalcev/generichid_1.0_i386.deb"><img style="background-color=white" border="0" src="gplv3-88x31.png" width="88" height="31"></a></p>
@@ -273,6 +273,7 @@ libusb-win32-device-bin</a></p>
 <h3>Source</h3>
 <p>The source code can be downloaded here&nbsp; <a href="http://users.tpg.com.au/ftkalcev/generichid_1.0_src.tgz"><img style="background-color=white" border="0" src="gplv3-88x31.png" width="88" height="31"></a>.&nbsp; 
 It requires Qt 4.5.2 (qtsdk2009.03).&nbsp; The release binaries are built 
-against the static libraries.</p>
+against the static libraries.&nbsp; The file is large, 37MB.&nbsp; This is 
+because it contains the library binaries :(</p>
 		</body>
 </html>
