--- a/GenericHID/generichid/help/troubleshooting.htm
+++ b/GenericHID/generichid/help/troubleshooting.htm
@@ -64,6 +64,11 @@
 		For a device that uses a lot of power, make sure you use a powered USB 
 		hub, and the power is connected.</td>
 	</tr>
+	<tr>
+		<td>Generic HID can't find the device in programming or regular mode.</td>
+		<td>The libusb drivers can be finicky.&nbsp; Try rebooting.&nbsp; Try 
+		reinstalling the libusb-win32 filter driver.</td>
+	</tr>
 </table>
 </body>
 
