--- a/GenericHID/generichid/help/index.html
+++ b/GenericHID/generichid/help/index.html
@@ -240,9 +240,12 @@ code and demos...</p>
 		</tr>
 	</table>
 	<h2 id=download>Download and Install</h2>
+		<p>All version can be downloaded from
+		<a href="https://sourceforge.net/projects/generichid/files/">sourceforge</a>.</p>
 <h3>Windows</h3>
-<p>The Win32 binary can be downloaded here...</p>
-		<p>&nbsp;<a href="http://users.tpg.com.au/ftkalcev/generichid_win32_1.0.zip"><img style="background-color=white" border="0" src="gplv3-88x31.png" width="88" height="31"></a>.&nbsp; </p>
+		<p>Download the latest Win32 binary,
+		<a href="https://sourceforge.net/projects/generichid/files/">
+		generichid_win32_x.x.zip</a>.</p>
 		<ol>
 			<li>To install the application, create an empty directory and unzip the 
 		contents of the file into the new directory.</li>
@@ -261,12 +264,10 @@ libusb-win32-filter-bin-0.1.12.2.exe</a></li>
 			<li>Run the GenericHID.exe application.</li>
 </ol>
 <h3>Linux</h3>
-<p>The Linux Debian pacakge can be downloaded here...</p>
-		<p>&nbsp;<a href="http://users.tpg.com.au/ftkalcev/generichid_1.0_i386.deb"><img style="background-color=white" border="0" src="gplv3-88x31.png" width="88" height="31"></a></p>
-		<p><span style="background-color: #FFFFFF">Install it using the dpkg 
-		command....</span></p>
-					<p>To install <b>GenericHID</b>, download the binary package and install it with your 
-					favourite package manager.
+<p>Download the latest Linux Debian package,
+<a href="https://sourceforge.net/projects/generichid/files/">
+generichid_x.x_i386.deb</a>.</p>
+		<p>Install <b>GenericHID </b>with your favourite package manager.
 					Or install it from the command line...
 					</p>
 					<blockquote class="code">
@@ -281,9 +282,11 @@ libusb-win32-filter-bin-0.1.12.2.exe</a></li>
 					<p><span style="background-color: #FFFFFF">Type generichid 
 					at the command line to run it.</span></p>
 <h3>Source</h3>
-<p>The source code can be downloaded here&nbsp; <a href="http://users.tpg.com.au/ftkalcev/generichid_1.0_src.tgz"><img style="background-color=white" border="0" src="gplv3-88x31.png" width="88" height="31"></a>.&nbsp; 
+<p>The source code can be downloaded 
+<a href="https://sourceforge.net/projects/generichid/files/">sourceforge</a>.&nbsp; 
 It requires Qt 4.5.2 (qtsdk2009.03).&nbsp; The release binaries are built 
 against the static libraries.&nbsp; The file is large, 37MB.&nbsp; This is 
-because it contains the library binaries :(</p>
+because it contains the library binaries :(&nbsp; If I get un-lazy, I'll clean 
+up the build process and remove the binaries.</p>
 		</body>
 </html>
