--- a/GenericHID/generichid/help/generichid.htm
+++ b/GenericHID/generichid/help/generichid.htm
@@ -237,6 +237,17 @@ them from the toolbar.</p>
 		treating them as separate displays (they have two E pins).</td>
 	</tr>
 	<tr>
+		<td><a href="lcd.htm"><img border="0" src="lcdicon.png" width="48" height="48"></a></td>
+		<td><a href="lcdspi.htm">LCD SPI</a></td>
+		<td>The LCD SPI is a non-standard custom LCD display.&nbsp; It is built 
+		from a 320x240 RGB TFT graphic LCD.&nbsp; The project to build it is 
+		documented
+		<a href="http://www.franksworkshop.com.au/Electronics/GraphicLCD/GraphicLCD.htm">
+		here</a>.&nbsp; The device connects to the SPI interface of the 
+		microcontroller, which means there is only one place to connect the 
+		display.</td>
+	</tr>
+	<tr>
 		<td><a href="led.htm"><img border="0" src="ledicon.png" width="48" height="48"></a></td>
 		<td><a href="led.htm">LED</a></td>
 		<td>An LED, or a single bit output.&nbsp; Be careful that you do not 
