--- a/GenericHID/generichid/help/index.html
+++ b/GenericHID/generichid/help/index.html
@@ -104,6 +104,15 @@ to define it.&nbsp; Click on them for large images.</p>
 		are supported as 2 displays.</td>
 	</tr>
 	<tr>
+		<td><a href="lcdspi.htm">LCD SPI</a></td>
+		<td>1<sup>1</sup></td>
+		<td>A custom graphic LCD display interfaced via the SPI bus is 
+		supported.&nbsp; This is a custom display with 320x240 resolution with 
+		16 bit colour.&nbsp; Details are
+		<a href="http://www.franksworkshop.com.au/Electronics/GraphicLCD/GraphicLCD.htm">
+		here</a>.</td>
+	</tr>
+	<tr>
 		<td><a href="led.htm">LED</a></td>
 		<td>48<sup>1</sup></td>
 		<td>LEDs can be used for status indicators.&nbsp; Each LED takes up 1 
