--- a/GenericHID/generichid/help/samples.htm
+++ b/GenericHID/generichid/help/samples.htm
@@ -139,16 +139,21 @@ hidcomp</a>.</p>
 	</tr>
 </table>
 <h2>CNC Pendant 2</h2>
-<p>This is still a work in progress.&nbsp; It is based around a
+<p>This is the pendant for my CNC Lathe, although there aren't any lathe specific features.&nbsp; It is based around a
 <a href="http://www.rose-bopla.com/Prod_Pgs/Handhelds/Prod_04_BG_180_220_Handheld_Series.htm">
 Rose-Bopla BG220 Handheld Enclosure</a>.&nbsp; It is a large hand held enclosure 
 with a cut out for a display.&nbsp; Unfortunately the cut out and mounting holes 
 for the display are an awkward fit.&nbsp; It didn't fit a stock 20x4 LCD.&nbsp; 
 A compact one would fit, but would leave a lot of space around the outside.&nbsp; 
 So, I found a 3.2&quot; 240x320 RGB graphics LCD that fit nicely when mounted 
-sideways.&nbsp; I've built the graphic controller which just does text at the 
+sideways.&nbsp; I've built the 
+<a href="http://www.franksworkshop.com.au/Electronics/GraphicLCD/GraphicLCD.htm">graphic controller</a> which just does text at the 
 moment, and now just need to update GenericHID to support it - it has an SPI 
-interface, multiple fonts, and lots of rows and columns.</p>
+interface, multiple fonts, and lots of rows and columns.&nbsp; The photo below 
+is of the pendant almost complete.&nbsp; A short write up of the completed pendant can be 
+found
+<a href="http://www.franksworkshop.com.au/CNC/LathePendant/LathePendant.htm">
+here</a>. </p>
 <p><img border="0" src="lathependant.jpg" width="634" height="427"></p>
 <p>&nbsp;</p>
 </body>
