--- a/GenericHID/generichid/help/wizbangidc.htm
+++ b/GenericHID/generichid/help/wizbangidc.htm
@@ -39,8 +39,8 @@ responsive the device is, at the cost of more CPU power.</p>
 
 <h3 id="Serial-Debug">Serial-Debug</h3>
 <p>Pins PD2/PD3 can be used as RXD/TXD pins for RS232 TTL Serial 
-debug output (38400, 8, none, 1).  This greatly slows down the device
-and generally shouldn't be used.
+debug output (38400, 8, none, 1).  Setting the value above zero enables
+debugging.  The higher the number the more debug (max 100).
 </p>
 
 <h3 id="HID-Debug">HID-Debug</h3>
