--- a/GenericHID/generichid/help/troubleshooting.htm
+++ b/GenericHID/generichid/help/troubleshooting.htm
@@ -88,6 +88,11 @@
 		because of driver conflicts between libusb and other device drivers.&nbsp; 
 		It is left to the user to ensure the correct device is plugged in.</td>
 	</tr>
+	<tr>
+		<td>Can't locate the device under linux.</td>
+		<td>By default Linux will not allow access to the device unless it is 
+		explicitly configured, or the application is running as the root user.</td>
+	</tr>
 </table>
 </body>
 
