--- a/GenericHID/generichid/help/index.html
+++ b/GenericHID/generichid/help/index.html
@@ -218,8 +218,7 @@ code and demos...</p>
 		<a href="http://www.fourwalledcubicle.com/">Dean Camera</a> and his
 		<a href="http://www.fourwalledcubicle.com/LUFA.php">LUFA</a> libraries.&nbsp; 
 		It is listed here as MyUSB because that was its name when I started 
-		using it.&nbsp; The Generic HID version is still based around the older 
-		MyUSB.</td>
+		using it.&nbsp; The Generic HID, as of version 1.2, now uses LUFA.</td>
 	</tr>
 	<tr>
 		<td><a href="http://dfu-programmer.sourceforge.net/">dfu-programmer</a></td>
@@ -322,6 +321,7 @@ up the build process and remove the binaries.</p>
 			<li>Support for teensy++ 2.0 development board</li>
 			<li>Enhanced PWM channels from 8 to 7</li>
 			<li>Configurable bits (1-16) for encoders</li>
+			<li>Upgrade from MyUSB to the latest LUFA</li>
 		</ul>
 		</td>
 	</tr>
