--- a/GenericHID/generichid/help/hardware.htm
+++ b/GenericHID/generichid/help/hardware.htm
@@ -32,7 +32,7 @@
 		<p>The photo below is a close up of the AT90USBKey, showing the holes 
 		for the I/O port header on the left, and the holes for the JTAG 
 		programming header on the right.</p>
-		<p><img border="0" src="AVRUSBKeyheader.jpg" width="319" height="189"></p>
+		<p><img border="0" src="avrusbkeyheader.jpg" width="319" height="189"></p>
 		<p>The JTAG programmer has regular 0.1&quot; x 0.1&quot; pin spacing.&nbsp; These 
 		are common header pins that can be found every where.&nbsp; They are 
 		spaced wide enough that they can be soldered to directly.</p>
