--- a/GenericHID/generichid/help/index.html
+++ b/GenericHID/generichid/help/index.html
@@ -314,6 +314,22 @@ up the build process and remove the binaries.</p>
 		<th>Description</td>
 	</tr>
 	<tr>
+		<td>1.3</td>
+		<td>6 Apr 2010</td>
+		<td>
+		<ul>
+            <li>Rename Digital Encoder to Incremental Encoders as it supports both digital and mechanical devices.</li>
+            <li>Encoder support for mechanical incremental encoders.  Added the pullup resistor option on the Incremental Encoder control.</li>
+            <li>New Incremental output mode for encoders.  Absolute mode accumulates an n-bit value then wraps.  Incremental mode reports the small changes since the last report.</li>
+            <li>New LCD report to turn on the cursor and the blinking cursor</li>
+            <li>Fix bug where directional switches just plain didn't work</li>
+            <li>Disable JTAG through software.  This is the default.  It enables more pins.</li>
+            <li>Fix C3/C2 pin swap on generic board</li>
+            <li>Add 16Mhz generic board.  For custom boards using the AT90USB1287/6 running at 16MHz</li>
+		</ul>
+		</td>
+	</tr>
+	<tr>
 		<td>1.2</td>
 		<td>18 Apr 2010</td>
 		<td>
