--- a/GenericHID/generichid/help/gettingstarted.htm
+++ b/GenericHID/generichid/help/gettingstarted.htm
@@ -88,8 +88,8 @@ prompted to install drivers, and then you can play with the device.&nbsp; The fl
 manuals, data sheets and sample code for the at90usb1287 microcontroller. You 
 can save this if you wish, but it is not needed for Generic HID, and most of the 
 data is available on the <a href="http://www.atmel.com/">Atmel website</a>.</p>
-<h3>Using Ubuntu 8.04</h3>
-<p>Generic HID has only been tested using Ubuntu 8.04 (kernel 2.6.24-16), but 
+<h3>Using Ubuntu</h3>
+<p>Generic HID has been tested using Ubuntu 10.04 and 12.04, but 
 should work with any linux with udev.</p>
 <p>When the device is plugged in, linux will silently detect the device and load 
 the necessary drivers.&nbsp; You can use the command <code>dmesg</code> to list 
