--- a/GenericHID/generichid/help/linuxpermissions.htm
+++ b/GenericHID/generichid/help/linuxpermissions.htm
@@ -7,7 +7,8 @@
 <body>
 <h1>Linux Permissions</h1>
 				<p>
-				Note - this information applies to Ubuntu 8.04 and may or may not work for other versions.
+				Note - this information applies to Ubuntu 
+					10.04 and 12.04, and may or may not work for other versions.
 				</p>
 				<p>
 				When you insert a USB device, by default, the device is owned by <a class="code">root</a>.
