Correct udev path

--- a/GenericHID/generichid/help/index.html
+++ b/GenericHID/generichid/help/index.html
@@ -347,8 +347,18 @@ see permission or access denied errors in the terminal windows.</p>
 		<th>Description</td>
 	</tr>
 	<tr>
+		<td>1.4</td>
+		<td>1 Dec 2013</td>
+		<td>
+		<ul>
+			<li>Fix bug with teensy2++ program code not being able to restart device from program dialog.</li>
+			<li>Deploy /etc/udev/rules/99-generichid.rules file</li>
+		</ul>
+        </td>
+	</tr>
+    <tr>
 		<td>1.3</td>
-		<td>28 Nov 2011</td>
+		<td>28 Nov 2013</td>
 		<td>
 		<ul>
 			<li>Linux Source release only.&nbsp; Download the source and read the instructions 
