--- a/generichid/help/index.html
+++ b/generichid/help/index.html
@@ -347,6 +347,19 @@ see permission or access denied errors in the terminal windows.</p>
 		<th>Description</td>
 	</tr>
 	<tr>
+		<td>1.6</td>
+		<td>6 Oct 2019</td>
+		<td>
+		<ul>
+			<li>Return outputs to the off state when the host stops accepting in reports (ie
+            when the software disconnects)
+			</li>
+			<li>Add RangeMin/RangeMax and Invert options to the potentiometer object.</li>
+			<li>Convert online help to github wiki format.</li>
+		</ul>
+        </td>
+	</tr>
+	<tr>
 		<td>1.5</td>
 		<td>2 Dec 2013</td>
 		<td>
